--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,53 +1,40 @@
-{{ partial "head.html" . }}
+{{ define "main"}}
+<div class="post-page">
+    <div class="post">
 
-<body>
-    <div class="main">
-        {{ partial "nav.html" . }}
-        {{ partial "header.html" . }}
-        <div class="content">
-            <div class="post-page">
-                <div class="post">
-
-                    <!-- post title -->
-                    <div class="post__title post__title--detail">
-                        <h2><a href='{{ .RelPermalink }}'>{{ .Title }}</a></h2>
-                        <span class="date">{{ .Date.Format "2006.01.02" }}</span>
-                    </div>
-
-                    <!-- post content -->
-                    <div class="post__content markdown">{{ .Content }}</div>
-
-                    <!-- post footer -->
-                    <div class="post__footer">
-                        {{ with .Params.tags }}
-                        <div class="meta">
-                            <div class="info">
-                                <span class="field tags">
-                                    <i class="ri-stack-line"></i>
-                                    {{ range . }}
-                                    <a href="{{ "tags" | absURL }}/{{ . | urlize }}/">{{ . }}</a>
-                                    {{ end }}
-                                </span>
-                            </div>
-                        </div>
-                        {{ end }}
-                    </div>
-
-                </div>
-
-                <!-- comment system -->
-                {{ if .Site.Params.valine.enable }}
-                {{ partial "comments.html" . }}
-                {{ else }}
-                <div class="doc_comments">{{ template "_internal/disqus.html" . }}</div>
-                {{ end }}
-
-            </div>
+        <!-- post title -->
+        <div class="post__title post__title--detail">
+            <h2><a href='{{ .RelPermalink }}'>{{ .Title }}</a></h2>
+            <span class="date">{{ .Date.Format "2006.01.02" }}</span>
         </div>
-    </div>
-    <a id="back_to_top" href="#" class="back_to_top"><i class="ri-arrow-up-s-line"></i></a>
-    {{ partial "footer.html" . }}
-    {{ partial "js.html" . }}
-</body>
 
-</html>
+        <!-- post content -->
+        <div class="post__content markdown">{{ .Content }}</div>
+
+        <!-- post footer -->
+        <div class="post__footer">
+            {{ with .Params.tags }}
+            <div class="meta">
+                <div class="info">
+                    <span class="field tags">
+                        <i class="ri-stack-line"></i>
+                        {{ range . }}
+                        <a href="{{ "tags" | absURL }}/{{ . | urlize }}/">{{ . }}</a>
+                        {{ end }}
+                    </span>
+                </div>
+            </div>
+            {{ end }}
+        </div>
+
+    </div>
+
+    <!-- comment system -->
+    {{ if .Site.Params.valine.enable }}
+    {{ partial "comments.html" . }}
+    {{ else }}
+    <div class="doc_comments">{{ template "_internal/disqus.html" . }}</div>
+    {{ end }}
+
+</div>
+{{ end }}
