--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<div class="header">
+<header class="header">
     <div class="site-title">
         <div class="site-title__title">
             <h1>
@@ -20,4 +20,4 @@
             </div>
         </div>
     </div>
-</div>
+</header>
