--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,21 +1,9 @@
-{{ partial "head.html" . }}
-
-<body>
-    <div class="main">
-        {{ partial "nav.html" . }}
-        {{ partial "header.html" . }}
-        <div class="content">
-            <div class="page-not-found">
-                <h1>(≥o≤)</h1>
-                <h2>{{ with .Site.Params.title404 }}{{ . }}{{ else }}404 Page Not Found{{ end }}</h2>
-                <!-- i18n 首页 -->
-                <h3><a href="{{ .Site.BaseURL }}">首页</a></h3>
-            </div>
-            <div class="pagination"></div>
-        </div>
-    </div>
-    {{ partial "footer.html" . }}
-    {{ partial "js.html" . }}
-</body>
-
-</html>
+{{ define "main"}}
+<div class="page-not-found">
+    <h1>(≥o≤)</h1>
+    <h2>{{ with .Site.Params.title404 }}{{ . }}{{ else }}404 Page Not Found{{ end }}</h2>
+    <!-- i18n 首页 -->
+    <h3><a href="{{ .Site.BaseURL }}">{{ i18n "home"}}</a></h3>
+</div>
+<div class="pagination"></div>
+{{end}}
