--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html {{ with .Site.LanguageCode }}lang="{{ . }}" {{ end }}>
-    {{- partial "head.html" . -}}
-    <body>
+{{- partial "head.html" . -}}
+
+<body>
+    <main class="main">
         {{ partial "nav.html" . }}
 
         {{ partial "header.html" . }}
 
-        <main id="content">
-        {{ block "main" . }}{{ end }}
-        </main>
+        <div class="content">
+            {{ block "content" . }}{{ end }}
+        </div>
+    </main>
 
-        <a id="back_to_top" href="#" class="back_to_top"><i class="ri-arrow-up-s-line"></i></a>
+    <a id="backToTop" href="#" class="back-to-top"><i class="ri-arrow-up-s-line"></i></a>
 
-        {{ partial "footer.html" . }}
+    {{ partial "footer.html" . }}
 
-        {{ partial "js.html" . }}
-    </body>
+    {{ partial "js.html" . }}
+</body>
+
 </html>
