--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -46,9 +46,9 @@
     <!-- css link -->
     <link rel="stylesheet" type="text/css" media="screen" href="{{ .Site.BaseURL }}css/normalize.css" />
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.0/animate.min.css" /> -->
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="{{ "css/zozo.css" |absURL }}" /> -->
-	<link rel="stylesheet" type="text/css" media="screen" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" />
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="{{ "css/highlight.css" | absURL }}" /> -->
+	<link rel="stylesheet" type="text/css" media="screen" href="{{ "css/remixicon.css" |absURL }}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ "css/custom.css" |absURL }}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ "css/highlight.css" | absURL }}" />
 
     <!-- custom css -->
     {{ range .Site.Params.customCSS }}
