--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,17 +1,19 @@
-<nav class="nav-container">
+<nav class="nav">
     <!-- nav list -->
-    <div class="site-nav" id="siteNav">
-        <ul>
+    <!-- nav__body  is child of nav-->
+    <!-- so that new a nav-list as parent(new module) for innner children"  -->
+    <div class="nav__body nav-list" id="siteNav">
+        <ul class="nav-list__container">
             {{ range .Site.Menus.main }}
-            <li>
-                <a href="{{ .URL | safeURL }}">{{ .Name }}</a>
+            <li class="nav-list__item">
+                <a class="nav-list__link" href="{{ .URL | safeURL }}">{{ .Name }}</a>
             </li>
             {{ end }}
         </ul>
     </div>
 
     <!-- nav menu -->
-    <div class="menu-icon">
+    <div class="nav__menu">
         <a id="menuIcon"><i class="ri-menu-line"></i></a>
     </div>
 </nav>
