--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -24,7 +24,7 @@
             </div>
 
             <!-- pagination -->
-            <div class="pagination"></div>
+            <div class="archive__pagination"></div>
         </div>
         <a id="backToTop" href="#" class="back-to-top"><i class="ri-arrow-up-s-line"></i></a>
     </div>
