--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="footer__powered-by">
-        <a href="https://example.com">Designed by example,</a>
-        <a href="http://www.gohugo.io/">Proudly published with Hugo</a>
+        <a class="footer__powered-by-link" href="https://example.com">Designed by example,</a>
+        <a class="footer__powered-by-link" href="http://www.gohugo.io/">Proudly published with Hugo</a>
     </div>
 
     <div class="footer__slogan">
