--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -177,6 +177,33 @@ a:hover, a:active {
     margin: 0 auto;
 }
 
+/* footer style */
+
+.footer {
+    max-width: 780px;
+    text-align: center;
+    font-size: 12px;
+    padding: 40px 0;
+    margin: 0 auto;
+}
+
+/* a. to fix issue */
+a.footer__powered-by-link {
+    color: #a6a6a6;
+}
+
+a.footer__powered-by-link:hover {
+    color: black;
+}
+
+.footer__slogan {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #000000;
+    font-size: 16px;
+    letter-spacing: 1px;
+}
+
 /* post style */
 
 .post {
@@ -242,3 +269,6 @@ a:hover, a:active {
     color: #6e6969;
     font-size: 12px;
 }
+
+/* archive style */
+/* 374 line */
