--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,35 +1,26 @@
-{{ partial "head.html" . }}
-
-<body>
-    <div class="main">
-        {{ partial "nav.html" . }}
-        {{ partial "header.html" . }}
-        <div class="content">
-            <div class="archive">
-                {{ range .Data.Pages.GroupByDate "2006" }}
-                <!-- group by year -->
-                <div class="archive__title">{{ .Key }}</div>
-                <div class="archive__list">
-                    <!-- iterate all pages per year -->
-                    {{ range .Pages }}
-                    <div class="archive__item">
-                        <div class="archive__post">
-                            <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-                            <div class="post-time"><span class="date">{{ .Date.Format "01-02" }}</span></div>
-                        </div>
-                    </div>
-                    {{ end }}
+{{define "content"}}
+<div class="content">
+    <div class="archive">
+        {{ range .Data.Pages.GroupByDate "2006" }}
+        <!-- group by year -->
+        <div class="archive__title">{{ .Key }}</div>
+        <div class="archive__list">
+            <!-- iterate all pages per year -->
+            {{ range .Pages }}
+            <div class="archive__item">
+                <div class="archive__post">
+                    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+                    <div class="post-time"><span class="date">{{ .Date.Format "01-02" }}</span></div>
                 </div>
-                {{ end }}
             </div>
-
-            <!-- pagination -->
-            <div class="archive__pagination"></div>
+            {{ end }}
         </div>
-        <a id="backToTop" href="#" class="back-to-top"><i class="ri-arrow-up-s-line"></i></a>
+        {{ end }}
     </div>
-    {{ partial "footer.html" . }}
-    {{ partial "js.html" . }}
-</body>
 
-</html>
+    <!-- pagination -->
+    <div class="archive__pagination"></div>
+    <!-- back to top -->
+    <a id="backToTop" href="#" class="back-to-top"><i class="ri-arrow-up-s-line"></i></a>
+</div>
+{{end}}
