--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,3 +8,31 @@
         <span>{{ .Site.Params.footerSlogan }}</span>
     </div>
 </footer>
+
+<style>
+    /* footer style */
+
+    .footer {
+        max-width: 780px;
+        text-align: center;
+        font-size: 12px;
+        padding: 40px 0;
+        margin: 0 auto;
+    }
+
+    .footer__powered-by-link {
+        color: #a6a6a6;
+    }
+
+    .footer__powered-by-link:hover {
+        color: black;
+    }
+
+    .footer__slogan {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        color: #000000;
+        font-size: 16px;
+        letter-spacing: 1px;
+    }
+</style>
