save time point

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -31,11 +31,24 @@
         margin: 60px auto 0;
     }
 
+    @media screen and (max-width: 900px) {
+        .main {
+            width: 95%;
+            margin-top: 20px;
+        }
+    }
+
     /* content style */
 
     .content {
         width: 720px;
         height: auto;
         margin: 0 auto;
+    }
+
+    @media screen and (max-width: 900px) {
+        .content {
+            width: 90%;
+        }
     }
 </style>
