--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -38,6 +38,12 @@
         background-size: cover;
     }
 
+    @media screen and (max-width: 900px) {
+        .header {
+            width: 90%;
+        }
+    }
+
     .site-title {
         position: relative;
         display: flex;
