--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -41,7 +41,7 @@ body {
     min-height: 100vh;
     flex-direction: column;
     color: #333333;
-    font-family: "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto font-size" 16px;
+    font-family: "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto font-size";
     width: 100%;
     background-color: #f7f7f7;
     margin: 0;
@@ -70,17 +70,30 @@ a {
     text-decoration: none;
 }
 
-/* a:link, a:visited {
-    transition: all 0.15s linear;
-    color: #424242;
+@media screen and (max-width: 900px) {
+    .main {
+        width: 95%;
+        margin-top: 20px;
+    }
+    /* .nav_container {
+        width: 95%;
+    }
+    .header, .content {
+        width: 90%;
+    }
+    .post_page {
+        padding-top: 0;
+    }
+    .footer a {
+        margin: 0 6px;
+    }
+    .post {
+        margin-top: 40px;
+    }
+    .post .post_title a {
+        font-size: 1.4rem;
+    }
+    .post_footer {
+        padding-bottom: 30px;
+    } */
 }
-
-a:hover, a:active {
-    text-decoration: underline;
-} */
-
-/*=========basic styles ends=============*/
-
-/* archive style */
-
-/* 374 line */
