--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,8 @@
 <nav class="nav">
     <div class="nav__menu">
         <a id="menuIcon" class="nav__menu-link">
-            <i class="ri-menu-line"></i>
+            <i class="ri-menu-line nav__menu-link-icon"></i>
+            <!-- when click, toggle icon class name-->
         </a>
     </div>
 
