Add css animation refer to animate.css

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
 {{ partial "head.html" . }}
 
 <body>
-    <main class="main">
+    <main class="main animated fadeInDown">
         {{ partial "nav.html" . }}
 
         {{ partial "header.html" . }}
