--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "content"}}
 <div class="post-page">
-    <div class="post">
+    <div class="post animated fadeInDown">
 
         <!-- post title -->
         <div class="post__title post__title--detail">
