--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -69,22 +69,26 @@ a {
     text-decoration: none;
 }
 
+/*
+refer:
+https://github.com/animate-css/animate.css/blob/master/source/_vars.css
+https://github.com/animate-css/animate.css/blob/master/source/_base.css
+https://github.com/animate-css/animate.css/blob/master/source/fading_entrances/fadeInDown.css
+----------------------------------------/
 /* animation*/
+.animated {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+}
+
+.fadeInDown {
+    animation-name: fadeInDown;
+}
+
 @keyframes fadeInDown {
     0% {
         opacity: 0;
-        transform: translateY(-3px);
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes fadeInUp {
-    0% {
-        opacity: 0;
-        transform: translateY(3px);
+        transform: translateY(-20px);
     }
     100% {
         opacity: 1;
